--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
             <strong class="projects-title ">
               <a href="https://github.com/Nivinrifai/menu.git">Project files on the github.</a>
                <a href="https://nivinrifai.github.io/menu2/" class="more-details">Browse the project.</a>
+                <a href="https://nivinrifai.github.io/Cafe-Bajouri/" class="more-details">Browse the project.
+
             </strong>
          </div>
      </div>
@@ -190,6 +192,8 @@
                <a href="https://github.com/Nivinrifai/website.git">Project files on the github.</a>
                <a href="https://nivinrifai.github.io/website/" class="more-details">Browse the project.
             </a>
+            <a href="https://nivinrifai.github.io/kor2an/" class="more-details">Browse the project.
+
             </strong>
          </div>
    </div> 
